# regwatch

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  conftest.py  design.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: deploy.yml
.hallmark/: log.json
deploy/: RUNBOOK.md  deploy-api.sh  policy-heartbeat-failed.json  policy-run-daily-failed.json  provision.sh
docs/: runbook.md
docs/compliance/: lgpd-posture.md
src/accounts/: api.py  models.py  permissions.py
src/accounts/migrations/: 0001_initial.py
src/accounts/tests/: test_api_auth.py  test_invite_user.py  test_models.py
src/config/: env.py  json_log.py  settings.py  settings_test.py  spa.py  urls.py  wsgi.py
src/config/tests/: test_env.py  test_json_log.py  test_smoke.py  test_spa.py
src/digests/: api.py  apps.py  email.py  models.py  notifier.py  resend.py
src/digests/migrations/: 0001_initial.py
src/digests/tests/: test_api.py  test_notifier.py  test_resend.py  test_send_api.py
src/enrichment/: anthropic_client.py  enricher.py  llm.py
src/gazette/: apps.py  contracts.py  ingest.py  models.py  normalize.py
src/gazette/inlabs/: __init__.py  (+3 more)
src/matching/: api.py  matcher.py  models.py
src/pipeline/: adapters.py  backfill.py  models.py  runner.py
src/watches/: api.py  grouping.py  models.py
web/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tokens.css  tsconfig.json  vite.config.ts
web/e2e/: login.spec.ts  smoke.spec.ts  triage.spec.ts
web/src/: App.svelte  app.css
(+89 files in other folders)
