[project]
name = "regwatch"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0,<6.0",
    "psycopg[binary]>=3.1",
    "dj-database-url>=2.1",
    "lxml>=5.0",
]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-django>=4.8"]

[tool.uv]
package = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = ["src"]
python_files = ["test_*.py"]
addopts = "-q"
