[project]
name = "regwatch"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0,<6.0",
    "psycopg[binary]>=3.1",
    "dj-database-url>=2.1",
    "lxml>=5.0",
    "httpx>=0.27",
    "djangorestframework>=3.15",
    "gunicorn>=22.0",
    "whitenoise>=6.7",
]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-django>=4.8", "pip-audit>=2.7"]

[tool.uv]
package = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings_test"
pythonpath = ["src"]
python_files = ["test_*.py"]
addopts = "-q"
